--- a/demo/index.html
+++ b/demo/index.html
@@ -64,8 +64,7 @@
         {#scope legalInfo}
         <div id="footer" class="text-center">
             {license} License<br />
-            ©{new Date()
-            .getFullYear()} {author}
+            ©{new Date().getFullYear()} {author}
         </div>
     </script>
     <script src="../index.js"></script>
