--- a/demo/index.html
+++ b/demo/index.html
@@ -22,7 +22,8 @@
                 <div class="navbar navbar-default">
                     <div class="container-fluid">
                         <div class="navbar-header">
-                            <a class="navbar-brand" href="#">{title}</a>
+                            {@href github.url}
+                            <a class="navbar-brand">{title}</a>
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
@@ -46,6 +47,7 @@
             </div>
 
             {#scope intro}
+            {%var editEnabled = false}
             <div class="container">
                 <h2>{title.toUpperCase()}</h2>
                 {#each paragraphs}
@@ -57,15 +59,25 @@
                     {@href github.url}
                     <a class="btn btn-primary btn-lg">GitHub</a>
                 </div>
-                <h2>Edit Intro Title</h2>
-                {%bind-value title}
-                <input class="form-control" type="text" />
+                <h2>
+                    Intro Title
+                    {%click-toggle editEnabled}
+                    <small>
+                        <a href="javascript:;">{editEnabled ? 'Done' : 'Edit'}</a>
+                    </small>
+                </h2>
+                {%show editEnabled}
+                <div class="form-group">
+                    {%bind-value title}
+                    <input class="form-control" type="text" />
+                </div>
+
             </div>
         </div>
 
         {#scope legalInfo}
         <div id="footer" class="text-center">
-            {license} {="<b>License</b>"}<br />
+            {="<b>{license} License</b>"}<br />
             ©{new Date().getFullYear()} {author}
         </div>
     </script>
