update readme and directory adjustment

--- a/demo/index.html
+++ b/demo/index.html
@@ -97,7 +97,7 @@
             ©{new Date().getFullYear()} {author}
         </div>
     </script>
-    <script src="../index.js"></script>
+    <script src="../build/drop.js"></script>
     <script>
         function addParagraph() {
             var data = this.dataHelper;
