fix decorator.target.remove() breaking initializing & directory adjustment.

--- a/demo/index.html
+++ b/demo/index.html
@@ -99,7 +99,7 @@
             ©{new Date().getFullYear()} {author}
         </div>
     </script>
-    <script src="../build/drop.js"></script>
+    <script src="../index.js"></script>
     <script>
         function addParagraph(e, scope) {
             var data = scope.dataHelper;
@@ -128,7 +128,7 @@
                 }
             ],
             intro: {
-                showIntro: true,
+                showIntro: false,
                 title: 'Just Another Passion Wheel!',
                 paragraphIndexes: ['I', 'II', 'III', 'IV', 'V', 'VI', 'VII', 'VIII', 'IX', 'X'],
                 paragraphs: [
