--- a/demo/index.html
+++ b/demo/index.html
@@ -85,7 +85,7 @@
                     <a href="javascript:;">Add</a>
                 </h2>
                 <div class="form-group">
-                    {%var newParagraphText}
+                    {%var newParagraphText = 'New paragraph...'}
                     {@class "form-control"}
                     <!-- approach no.2 -->
                     {&input value = newParagraphText}
@@ -140,11 +140,11 @@
                 ]
             },
             github: {
-                    url: 'https://github.com/vilic/drop'
+                url: 'https://github.com/vilic/drop'
             },
             legalInfo: {
-                    license: 'MIT',
-                    author: 'VILIC VANE'
+                license: 'MIT',
+                author: 'VILIC VANE'
             }
         });
 
